--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,5 +1,10 @@
 @import "./normalize.css";
 
+:root {
+  --primary: #175326;
+  --text-white: #ffffff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +17,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img {
+  width: auto;
 }
