--- a/src/shared/ui/atoms/card/card.module.css
+++ b/src/shared/ui/atoms/card/card.module.css
@@ -8,9 +8,20 @@
   text-align: center;
 }
 
+.img {
+  display: block;
+
+  margin: 0 auto;
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
 .img > img {
   display: block;
 
+  width: 100%;
   max-width: 200px;
   margin: 0 auto;
 
